# smallproxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  mappings.json  pyproject.toml  requirements.txt
app/: main.py
app/config/: config.yaml
app/dependencies/: __init__.py
app/internals/: bootstrap.py  context.py  exceptions.py
app/internals/logging/: json_formatter.py
app/internals/middleware/: __init__.py  correlation_id.py  exception.py  request_logger.py
app/lib/: borg.py  config.py
app/lib/data_access/: json_repo.py  short_url_file_repo.py  short_url_repo.py  sqllite_repo.py  yaml_repo.py
app/lib/factory/: repo_factory.py
app/models/: short_url.py
app/routers/: __init__.py  api.py  proxy.py
test/: conftest.py  test_correlation_id.py
test/internals/middleware/: test_correlation_id.py  test_exception.py
test/lib/: test_config.py
test/lib/factory/: test_repo_factory.py
