[project]
name = "smallpoxy"
version = "0.1.0"
description = "A lightweight short url proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi-cli==0.0.8",
    "fastapi[standard]==0.124.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.27.2",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "pathspec==0.12.1",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pygments==2.18.0",
    "pytest-cov>=6.2.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytz>=2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "rich==13.9.3",
    "ruff==0.7.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.49.1",
    "typer==0.15.1",
    "urllib3==2.6.2",
    "uvicorn==0.32.0",
    "uvloop==0.21.0",
    "validators>=0.35.0",
    "watchfiles==0.24.0",
    "websockets==13.1",
]

[dependency-groups]
dev = [
    "mypy==1.16.1",
    "mypy-extensions==1.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
    "typing-extensions==4.12.2",
]
